11_Kubernetes_Ingress/11_02_Kubernetes_Ingress_http/http_retail_store_k8s_manifests/06_ingress/02_ingress_http_ip_mode.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-http-ip-mode
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: retail-store-http-ip-mode
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb 
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
